adding docker file for standard openJdk11 Builder image